--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="eng"
     <head>
+      <link rel="stylesheet" href="./assets/css/style.css" />
         <meta charset="UTF-8" />
         <title>Run Buddy</title>
+
+        <meta charset="UTF-8" />
+        <title>RUN BUDDY</title>
     </head>
     <body>
-        <h1>RUN BUDDY</h1>
-        What We Do What You Do Your Trainers Reach Out
-    </body>
 
     <!-- navigation -->
 <header>
@@ -26,7 +27,7 @@
           <a href="#what-you-do">What You Do</a>
         </li>
         <li>
-          <a href="#your-trainers"> Yor Trainers</a>
+          <a href="#your-trainers"> Your Trainers</a>
         </li>
         <li>
           <a href="#reach-out">Reach Out</a>
@@ -34,6 +35,7 @@
         </ul>
           </nav>
   </header>
+</body>
   
   <!-- hero/jumbotron -->
   <section>
@@ -62,5 +64,8 @@
   <!-- footer -->
   <footer>
     <h2>❤️ Made with love by Run Buddy.</h2>
+    <div><a href="#">Read Our Privacy Policy</a><br />
+      &copy; 2019 Run Buddy, Inc.
+    </div>
   </footer>
 </html>
