style what we do section

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
 <!--end hero-->
 
 <!-- "what we do" section -->
-<section id="what-we-do">
+<section id="what-we-do" class="intro">
   <h2>What We Do</h2>
 <p>
-  Butcher selfies chambray shavvy chic gentrify readymade yr echo park xox
+  Butcher selfies chambray shavvy chic gentrify readymade yr echo park XOXO tumblr normcore Bansky direct trade blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flanner meggings narwhal Marfa Schlitz sustainaable intelligenstia umami deep v craft
 </p>
 </section>
 
