--- a/index.html
+++ b/index.html
@@ -70,38 +70,38 @@
 
 <!-- "what we do" section -->
 <section id="what-we-do" class="intro">
-  <h2>What We Do</h2>
+  <h2 class="selection-title primary-border">What We Do</h2>
 <p>
   Butcher selfies chambray shavvy chic gentrify readymade yr echo park XOXO tumblr normcore Bansky direct trade blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flanner meggings narwhal Marfa Schlitz sustainaable intelligenstia umami deep v craft
 </p>
 </section>
 
 <!-- "what you do" section -->
-<section id="what-you-do">
-  <h2>What You Do</h2>
+<section id="what-you-do" class="steps">
+  <h2><h2 class="selection-title primary-border">What You Do</h2>
 
   <div>
     <!-- insert this img element-->
     <img src="./assets/image/step-1.svg" alt="" />
-    <h3>Step 1: Fill Out The Form Above.</h3>
+    <h3>Step 1: <span>Fill Out The Form Above.</span></h3>
     <p>You're already here, so why not?</p>
   </div>
 
   <div>
     <img src="./assets/image/step-2.svg" alt="" />
-    <h3>Step 2: Consult with One of Our Trainers.</h3>
+    <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
     <p>Are you here to build muscle, lose weight, or just feel good?</p>
   </div>
 
   <div>
     <img src="./assets/image/step-3.svg" alt="" />
-    <h3>Step 3: Get running.</h3>
+    <h3>Step 3: <span>Get running.</span></h3>
     <p>Hit the ground running (literally) once your trainer lays out your plan</p>
   </div>
 
 <div>
   <img src="./assets/image/step-4.svg" alt="" />
-  <h3>Step 4: See Results.</h3>
+  <h3>Step 4: <span>See Results.</span></h3>
   <p>Bi-weekly checkins with your trainer will keep you focused.</p>
 </div>
 </section>
