style what we do

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 <!-- "what we do" section -->
 <section id="what-we-do" class="intro">
-  <h2 class="selection-title primary-border">What We Do</h2>
+  <h2 class="section-title primary-border">What We Do</h2>
 <p>
   Butcher selfies chambray shavvy chic gentrify readymade yr echo park XOXO tumblr normcore Bansky direct trade blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flanner meggings narwhal Marfa Schlitz sustainaable intelligenstia umami deep v craft
 </p>
@@ -78,7 +78,7 @@
 
 <!-- "what you do" section -->
 <section id="what-you-do" class="steps">
-  <h2><h2 class="selection-title primary-border">What You Do</h2>
+  <h2 class="section-title primary-border">What You Do</h2>
 
   <div>
     <!-- insert this img element-->
