--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- navigation -->
   <header>
     <h1>
-      <a = href"/">RUN BUDDY</a>
+      <a=href"/">RUN BUDDY</a>
     </h1>
     <nav>
       <!-- Unordered list element -->
@@ -52,9 +52,9 @@
       <input type="tel" placeholder="Phone Number" name="phone number" id="phone" class="form-input">
       <p>
         Have you worked out with a trainer before?
-        <input type="radio" name="trainer-confirm" id="trainer-yes" class= form-label>
+        <input type="radio" name="trainer-confirm" id="trainer-yes" class=form-label>
         <label for="trainer-yes">Yes</label>
-        <input type="radio" name="trainer-confirm" id="trainer-no" class= form-label>
+        <input type="radio" name="trainer-confirm" id="trainer-no" class=form-label>
         <label for="trainer-no">No</label>
       </p>
       <p>I acknowledge that I am at least 18 years of age
@@ -71,9 +71,12 @@
 <!-- "what we do" section -->
 <section id="what-we-do" class="intro">
   <h2 class="section-title primary-border">What We Do</h2>
-<p>
-  Butcher selfies chambray shavvy chic gentrify readymade yr echo park XOXO tumblr normcore Bansky direct trade blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flanner meggings narwhal Marfa Schlitz sustainaable intelligenstia umami deep v craft
-</p>
+  <p>
+    Butcher selfies chambray shavvy chic gentrify readymade yr echo park XOXO tumblr normcore Bansky direct trade blue
+    Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin
+    fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flanner meggings narwhal Marfa Schlitz
+    sustainaable intelligenstia umami deep v craft
+  </p>
 </section>
 
 <!-- "what you do" section -->
@@ -99,16 +102,55 @@
     <p>Hit the ground running (literally) once your trainer lays out your plan</p>
   </div>
 
-<div>
-  <img src="./assets/image/step-4.svg" alt="" />
-  <h3>Step 4: <span>See Results.</span></h3>
-  <p>Bi-weekly checkins with your trainer will keep you focused.</p>
-</div>
+  <div>
+    <img src="./assets/image/step-4.svg" alt="" />
+    <h3>Step 4: <span>See Results.</span></h3>
+    <p>Bi-weekly checkins with your trainer will keep you focused.</p>
+  </div>
 </section>
 
 <!-- "meet the trainers" section -->
-<section>
-  <h2>Meet The Trainers</h2>
+<section id="your-trainers" class="trainers">
+  <h2 class="section-title primary-border">Meet The Trainers</h2>
+
+  <!--First Trainers Bio-->
+  <article class="trainer">
+  <img src="./assets/image/trainer-1.jpg" alt=Aaron Stephens in his workout clothes, ready to pump iron" />
+  <div class="trainer-bio">
+    <h3>Aaron Stevens</h3>
+    <h4>Speed / Strength</h4>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
+      sed
+      itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+    </p>
+  </div>
+  </article>
+
+  <!--Second Trainer Bio-->
+  <article class="trainer">
+    <div class="trainer-bio text-right">
+      <h3>Joanna Gill</h3>
+      <h4>Endurance</h4>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+        itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+      </p>
+    </div>
+    <img src="./assets/image/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+  </article>
+
+  <!--Third Trainer Bio-->
+  <article class="trainer">
+    <img src="./assets/image/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+    <div class="trainer-bio text-left">
+      <h3>Harry "the Headband" Smith</h3>
+      <h4>Strength</h4>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+        itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+      </p>
+    </div>
+  </article>
 </section>
 
 <!-- "reach out" section -->
