--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 <section id="your-trainers" class="trainers">
   <h2 class="section-title primary-border">Meet The Trainers</h2>
 
-  <!--First Trainers Bio-->
+  <!--First Trainer Bio-->
   <article class="trainer">
   <img src="./assets/image/trainer-1.jpg" alt=Aaron Stephens in his workout clothes, ready to pump iron" />
   <div class="trainer-bio">
@@ -156,6 +156,23 @@
 <!-- "reach out" section -->
 <section>
   <h2>Reach Out</h2>
+  <div class="contact-info">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3012.574040594197!2d-74.147861284604!3d40.96890937930482!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2fcb646aa0557%3A0xe9defade7872ea0a!2s129%20Rock%20Rd%2C%20Hawthorne%2C%20NJ%2007506!5e0!3m2!1sen!2sus!4v1618362840147!5m2!1sen!2sus" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy">"
+    </iframe>
+  <h3>Run Buddy</h3>
+  <p>Any questions or concerns before signing up?
+    <br />
+    Let us know and we'll be happy to talk to you!
+  </p>
+  <address>
+    55 Main Street <br/>
+    Some Town, Ca <br/>
+    12345 <br />
+    P: 555.RUN.BUDZ (555.786.2839)<br/>
+    E: <a =href"mailto:info@runbuddy.io">info@runbuddy.io</a>
+  </address>
+</div>
+
 </section>
 
 <!-- footer -->
