--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- navigation -->
   <header>
     <h1>
-      <a=href"/">RUN BUDDY</a>
+      <a=href" /">RUN BUDDY</a>
     </h1>
     <nav>
       <!-- Unordered list element -->
@@ -115,15 +115,15 @@
 
   <!--First Trainer Bio-->
   <article class="trainer">
-  <img src="./assets/image/trainer-1.jpg" alt=Aaron Stephens in his workout clothes, ready to pump iron" />
-  <div class="trainer-bio">
-    <h3>Aaron Stevens</h3>
-    <h4>Speed / Strength</h4>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
-      sed
-      itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
-    </p>
-  </div>
+    <img src="./assets/image/trainer-1.jpg" alt=Aaron Stephens in his workout clothes, ready to pump iron" />
+    <div class="trainer-bio">
+      <h3>Aaron Stevens</h3>
+      <h4>Speed / Strength</h4>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
+        sed
+        itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+      </p>
+    </div>
   </article>
 
   <!--Second Trainer Bio-->
@@ -132,7 +132,8 @@
       <h3>Joanna Gill</h3>
       <h4>Endurance</h4>
       <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
+        sed
         itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
       </p>
     </div>
@@ -141,12 +142,14 @@
 
   <!--Third Trainer Bio-->
   <article class="trainer">
-    <img src="./assets/image/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+    <img src="./assets/image/trainer-3.jpg"
+      alt="Harry Smith wearing a headband and lifting comically small pink weights" />
     <div class="trainer-bio text-left">
       <h3>Harry "the Headband" Smith</h3>
       <h4>Strength</h4>
       <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
+        sed
         itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
       </p>
     </div>
@@ -156,22 +159,30 @@
 <!-- "reach out" section -->
 <section id="reach-out" class="contact">
   <h2 class="section-title secondary-border">Reach Out</h2>
-  <div class="contact-info">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3012.574040594197!2d-74.147861284604!3d40.96890937930482!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2fcb646aa0557%3A0xe9defade7872ea0a!2s129%20Rock%20Rd%2C%20Hawthorne%2C%20NJ%2007506!5e0!3m2!1sen!2sus!4v1618362840147!5m2!1sen!2sus" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy">"
+  <div class="contact-info row">
+   <div class="row"> 
+      <div class="column-left"></div>
+     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3012.574040594197!2d-74.147861284604!3d40.96890937930482!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2fcb646aa0557%3A0xe9defade7872ea0a!2s129%20Rock%20Rd%2C%20Hawthorne%2C%20NJ%2007506!5e0!3m2!1sen!2sus!4v1618362840147!5m2!1sen!2sus">
     </iframe>
-  <h3>Run Buddy</h3>
-  <p>Any questions or concerns before signing up?
-    <br />
-    Let us know and we'll be happy to talk to you!
-  </p>
-  <address>
-    55 Main Street <br/>
-    Some Town, Ca <br/>
-    12345 <br />
-    P: 555.RUN.BUDZ (555.786.2839)<br/>
-    E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
-  </address>
-</div>
+    </div>
+    <div class="column-right">
+    <h3>Run Buddy</h3>
+    <p>Any questions or concerns before signing up?
+      <br />
+      Let us know and we'll be happy to talk to you!
+    </p>
+    <address>
+      55 Main Street <br />
+      Some Town, Ca <br />
+      12345 <br />
+      P: 555.RUN.BUDZ (555.786.2839)<br />
+      E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+    </div>
+    </div>
+    </address>
+
+  </div>
+  </div>
 
 </section>
 
