added flex to html

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 
 <!-- "what we do" section -->
 <section id="what-we-do" class="intro">
+  <div class="flex-row">
   <h2 class="section-title primary-border">What We Do</h2>
   <p>
     Butcher selfies chambray shavvy chic gentrify readymade yr echo park XOXO tumblr normcore Bansky direct trade blue
@@ -82,11 +83,15 @@
     fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flanner meggings narwhal Marfa Schlitz
     sustainaable intelligenstia umami deep v craft
   </p>
+</div>
 </section>
 
 <!-- "what you do" section -->
 <section id="what-you-do" class="steps">
+  <div class="flex-row">
+
   <h2 class="section-title secondary-border">What You Do</h2>
+  </div>
 
   <div>
     <!-- insert this img element-->
