--- a/index.html
+++ b/index.html
@@ -140,15 +140,16 @@
 </section>
 
 <!-- "meet the trainers" section -->
-<section id="your-trainers" class="trainers">
+<section id="your-trainers">
   <h2 class="section-title primary-border">Meet The Trainers</h2>
 
   <!--First Trainer Bio-->
+  <div class="trainers">
   <article class="trainer">
     <img src="./assets/image/trainer-1.jpg" alt=Aaron Stephens in his workout clothes, ready to pump iron" />
     <div class="trainer-bio">
-      <h3>Aaron Stevens</h3>
-      <h4>Speed / Strength</h4>
+      <h3 class="trainer-name">Aaron Stephens</h3>
+      <h4 class="trainer-role">Speed / Strength</h4>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
         sed
         itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
@@ -157,26 +158,27 @@
   </article>
 
   <!--Second Trainer Bio-->
+  
   <article class="trainer">
-    <div class="trainer-bio text-right">
-      <h3>Joanna Gill</h3>
-      <h4>Endurance</h4>
+    <img src="./assets/image/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+    <div class="trainer-bio">
+      <h3 class="trainer-name">Joanna Gill</h3>
+      <h4 class="trainer-role">Endurance</h4>
       <p>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
         sed
         itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
       </p>
     </div>
-    <img src="./assets/image/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
   </article>
 
   <!--Third Trainer Bio-->
   <article class="trainer">
     <img src="./assets/image/trainer-3.jpg"
       alt="Harry Smith wearing a headband and lifting comically small pink weights" />
-    <div class="trainer-bio text-left">
-      <h3>Harry "the Headband" Smith</h3>
-      <h4>Strength</h4>
+    <div class="trainer-bio">
+      <h3 class="trainer-name">Harry "the Headband" Smith</h3>
+      <h4 class="trainer-role">Strength</h4>
       <p>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
         sed
@@ -185,6 +187,7 @@
     </div>
   </article>
 </section>
+</div>
 
 <!-- "reach out" section -->
 <section id="reach-out" class="contact">
