fixed meet the trainers flexbox

--- a/index.html
+++ b/index.html
@@ -152,14 +152,15 @@
 <!--What you do end-->
 
 <!-- "meet the trainers" section -->
-<section id="your-trainers">
+
+  <section id="meet-the-trainers">
   <div class="flex-row">
+
   <h2 class="section-title primary-border">Meet The Trainers</h2>
   </div>
-  
 
   <!--First Trainer Bio-->
-  
+  <div class="trainers">
   <article class="trainer">
     <img src="./assets/image/trainer-1.jpg" alt=Aaron Stephens in his workout clothes, ready to pump iron" />
     <div class="trainer-bio">
@@ -201,7 +202,10 @@
     </div>
   </article>
 </div>
+</div>
 </section>
+
+
 <!--Meet the trainers end-->
 
 
