--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
 <!-- "meet the trainers" section -->
 
-  <section id="meet-the-trainers">
+  <section id="your-trainers">
   <div class="flex-row">
 
   <h2 class="section-title primary-border">Meet The Trainers</h2>
